working on home page

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -18,8 +18,20 @@
     display: flex;
 }
 
+.flex-column {
+    flex-direction: column;
+}
+
 .flex-align-center {
     align-items: center;
+}
+
+.flex-align-start {
+    align-items: flex-start;
+}
+
+.flex-align-end {
+    align-items: flex-end;
 }
 
 .flex-justify-between {
