--- a/components/common/card/card.module.scss
+++ b/components/common/card/card.module.scss
@@ -1,7 +1,11 @@
 .card {
     overflow: hidden;
     background-color: $color-secondary;
-    width: fit-content;
     color: white;
     font-size: 1rem;
+    width: fit-content;
+
+    &.full_width {
+        width: 100%;
+    }
 }
