--- a/components/core/header/header.module.scss
+++ b/components/core/header/header.module.scss
@@ -4,6 +4,7 @@
     .logo {
         font-size: 1.875rem;
         font-weight: 1000;
+        font-family: 'Open Sans', sans-serif;
     }
 
     .nav {
