--- a/assets/styles/core.scss
+++ b/assets/styles/core.scss
@@ -27,6 +27,7 @@ body {
     background-color: $color-background;
     min-height: 100vh;
     color: white;
+    font-size: 1rem;
 
     &::-webkit-scrollbar {
         width: .5rem;
@@ -42,4 +43,8 @@ body {
             background-color: black;
         }
     }
+}
+
+svg {
+    display: block;
 }
