--- a/assets/styles/pages/home.page.module.scss
+++ b/assets/styles/pages/home.page.module.scss
@@ -1,1 +1,22 @@
-.vitrin {}
+.search_section {
+    background-color: rgba($color: $color-secondary, $alpha: .5) !important;
+    box-shadow: 0 0 .625rem rgba($color: #000000, $alpha: .25);
+    gap: .625rem;
+
+    .search_field {
+        gap: 1rem;
+    }
+
+    .popular_searches {
+        gap: 1rem;
+
+        .items {
+            column-gap: .5rem;
+            row-gap: 0.5rem;
+
+            .popular_search_item {
+                font-size: .625rem;
+            }
+        }
+    }
+}
