--- a/components/core/footer/footer.module.scss
+++ b/components/core/footer/footer.module.scss
@@ -1,6 +1,7 @@
 .footer {
     background-color: #070707;
     padding: .625rem 0;
+    margin-top: 1.5rem;
 
     .footer__main {
         position: relative;
