--- a/components/common/section/section.component.module.scss
+++ b/components/common/section/section.component.module.scss
@@ -1,7 +1,7 @@
 .section {
-    .title {
-        font-size: 1rem;
-    }
+    // .title {
+    //     font-size: 1rem;
+    // }
 
     .main {
         width: 100%;
