developing film page, mouse light added

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -59,6 +59,14 @@
     justify-content: center;
 }
 
+.flex-justify-start {
+    justify-content: flex-start;
+}
+
+.flex-justify-end {
+    justify-content: flex-end;
+}
+
 .button {
     cursor: pointer;
 }
