--- a/assets/styles/core.scss
+++ b/assets/styles/core.scss
@@ -23,6 +23,11 @@
 
 }
 
+:root {
+    --cursorX: 50vw;
+    --cursorY: 50vh;
+}
+
 body {
     background-color: $color-background;
     min-height: 100vh;
@@ -41,6 +46,54 @@ body {
 
         &:active {
             background-color: black;
+        }
+    }
+
+    .web-lamp {
+        position: fixed;
+        z-index: 3;
+        top: 1rem;
+        left: 0;
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+
+        &>svg {
+            pointer-events: all;
+        }
+
+    }
+
+    &.dark::before {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        pointer-events: none;
+        z-index: 2;
+        background: radial-gradient(circle 10vmax at var(--cursorX) var(--cursorY),
+                rgba(0, 0, 0, 0) 0%,
+                rgba(0, 0, 0, .5) 80%,
+                rgba(0, 0, 0, .8) 100%);
+    }
+
+    &:not(.dark) {
+        .web-lamp {
+            &::before {
+                content: "";
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                background: radial-gradient(circle 2vmax at 1.1rem 2rem,
+                        rgba($color: #fff, $alpha: .95),
+                        rgba($color: #fff, $alpha: .5),
+                        rgba($color: #fff, $alpha: 0)),
+                ;
+            }
         }
     }
 }
