--- a/components/core/footer/footer.module.scss
+++ b/components/core/footer/footer.module.scss
@@ -1,4 +1,5 @@
 .footer {
+    // position: relative;
     background-color: #070707;
     padding: .625rem 0;
     margin-top: 1.5rem;
@@ -53,4 +54,5 @@
             font-size: .625rem;
         }
     }
+
 }
