working on movie page

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -3,4 +3,6 @@ $color-secondary: #252525;
 $color-background: #2C3333;
 $color-primary-light: #00000040;
 $color-shadow-primary: #00000040;
-$color-gray-med: #D9D9D980
+$color-gray-med: #D9D9D980;
+
+$color-danger: #8c0000;
