--- a/components/common/accordian/accordian.component.module.scss
+++ b/components/common/accordian/accordian.component.module.scss
@@ -2,6 +2,7 @@
     border-radius: .625rem;
     overflow: hidden;
     transition: .3s;
+    background-color: rgba($color: #000000, $alpha: 0.2);
 
     .header {
         padding: .625rem 0.9375rem .625rem 1.125rem;
@@ -13,5 +14,9 @@
 
     &:hover {
         box-shadow: 0 0 .625rem rgba($color: #000000, $alpha: .6);
+    }
+
+    .content {
+        padding: 1rem;
     }
 }
