--- a/assets/styles/core.scss
+++ b/assets/styles/core.scss
@@ -6,19 +6,19 @@
 
 
     @media (min-width: $breakpoint-widescreen) {
-        font-size: 110%;
+        font-size: 120%;
     }
 
-    @media (max-width: $breakpoint-desktop) {
-        font-size: 90%;
-    }
+    // @media (max-width: $breakpoint-desktop) {
+    //     font-size: 90%;
+    // }
 
     @media (max-width: $breakpoint-tablet) {
-        font-size: 80%;
+        font-size: 95%;
     }
 
     @media (max-width: $breakpoint-mobile) {
-        font-size: 70%;
+        font-size: 85%;
     }
 
 }
