--- a/components/common/accordian/accordian.component.module.scss
+++ b/components/common/accordian/accordian.component.module.scss
@@ -1,7 +1,7 @@
 .accordian {
     border-radius: .625rem;
     overflow: hidden;
-    transition: .3s;
+    transition: .5s cubic-bezier(.33, .81, .94, .98);
     background-color: rgba($color: #000000, $alpha: 0.2);
 
     .header {
@@ -10,13 +10,39 @@
         border-radius: .625rem;
         overflow: hidden;
         cursor: pointer;
+
+        .arrow_icon {
+            transition: .3s;
+        }
     }
 
     &:hover {
         box-shadow: 0 0 .625rem rgba($color: #000000, $alpha: .6);
     }
 
-    .content {
-        padding: 1rem;
+    .main {
+        position: relative;
+
+        .content {
+            position: absolute;
+            width: 100%;
+            padding: 1rem;
+        }
+    }
+
+    &.is_open {
+        .header {
+            .arrow_icon {
+                transform: rotateZ(90deg);
+            }
+        }
+    }
+
+    &.is_open_ltr {
+        .header {
+            .arrow_icon {
+                transform: rotateZ(-90deg);
+            }
+        }
     }
 }
